# sentiment-price-tracker

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  compose.yml  design-document.md  engines.py  main.py  project-plan.md  pyproject.toml  query_db.py
concept/: prototype.py  raw_rss.py
src/: config.py  database.py  ingestion.py  model.py  pipeline.py
tests/: test_ingestion.py  test_integration.py
