[project]
name = "sentiment-price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "feedparser>=6.0.12",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "psutil>=7.2.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "structlog>=25.5.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "yfinance>=1.0",
]

[tool]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
 
[tool.hatch.build.targets.wheel]
packages = ["src"]
